<?xml version="1.0"?>
<package format="3">
  <name>validation_suite</name>
  <version>0.0.1</version>
  <description>ROS2 IMU Sensor Validation Framework</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <test_depend>pytest</test_depend>
</package>
